force-app/main/default/objects/blng__TaxIntegration__c/fields/AVA_BLNG__DocCode__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__DocCode__c</fullName>
    <label>Doc Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVA_BLNG__TaxCode</valueSetName>
    </valueSet>
</CustomField>