force-app/main/default/objects/blng__TaxIntegration__c/fields/AVA_BLNG__Enable_AvaTax_Logging__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Enable_AvaTax_Logging__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Activates request logging for transactions for a period of 7 days. WARNING – only enable this for troubleshooting purposes as this may slow down org performance.</inlineHelpText>
    <label>Enable AvaTax Logging</label>
    <type>Checkbox</type>
</CustomField>