force-app/main/default/objects/blng__TaxIntegration__c/fields/AVA_BLNG__Validate_Address__c.field-meta.xml
<CustomField>
    <fullName>AVA_BLNG__Validate_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validate Addresses</label>
    <type>Checkbox</type>
</CustomField>